Bug 187902 - Status bar gives wrong picture filename and position in list after "Save As"
Summary: Status bar gives wrong picture filename and position in list after "Save As"
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Showfoto-Thumbs (other bugs)
Version First Reported In: 0.10.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-23 06:05 UTC by Joe Biden
Modified: 2022-02-05 05:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joe Biden 2009-03-23 06:05:28 UTC
Version:           0.10.0 (using 4.2.1 (KDE 4.2.1), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.29-rc8

To reproduce:

1.) Load 20 files
2.) Select picture 10 (status bar at bottom will read correct fn and "image 10 of 20")
3.) Make changes and "Save As" another fn
4.) Statusbar does not change, even though the new image is image 21, and it is selected.
Comment 1 Joe Biden 2009-03-23 06:05:49 UTC
Not a big deal, just a small detail.
Comment 2 Andi Clemens 2009-03-23 08:06:42 UTC
Hmm for me it is working, in 0.10 and in 0.11.
What I did:

1.) Load 20 files
2.) Select picture 10 (status bar at bottom will read correct fn and "image 10
of 20")
3.) Make changes and "Save As" another fn
4.) Statusbar is updated, new file count is 21. If I select the new file, the correct filename is displayed in the statusbar.

Brendan,

maybe I misunderstood you. Do you mean that if you save the new image file, it is not automatically selected in the AlbumUI? Or do you mean that the statusbar information simply is not updated (it still reads image10.jpg 10/20) ?

Andi
Comment 3 Andi Clemens 2009-03-23 08:12:01 UTC
Oh, it is early in the morning :-)
You are talking about showFoto, not digiKam. Need to check that again!

Andi
Comment 4 Andi Clemens 2009-03-23 08:14:35 UTC
Yes, now I can confirm:

The new image will be displayed and selected, the file counter will be increased, but the wrong position number and file name is shown in the statusbar.

Andi
Comment 5 caulier.gilles 2009-04-17 09:58:12 UTC
Andi, it still valid using current code from svn ?

Gilles
Comment 6 Andi Clemens 2009-04-17 10:01:31 UTC
Yes, still valid.
Comment 7 Andi Clemens 2009-05-26 10:53:22 UTC
SVN commit 972993 by aclemens:

We had a race condition here.
Thumbbar::insertItem will call slotUpdateItemInfo() before
saveAsIsComplete() is finished. Therefore the currentItem will be set to
the original image, not the new (saved as) one.
We need to call slotUpdateItemInfo() in saveAsIsComplete() manually to
make sure the statusbar is updated correctly.

BUG:187902

 M  +1 -0      showfoto.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=972993