We had a race condition here. Thumbbar::insertItem will call slotUpdateItemInfo() before saveAsIsComplete() is finished. Therefore the currentItem will be set to the original image, not the new (saved as) one. We need to call slotUpdateItemInfo() in saveAsIsComplete() manually to make sure the statusbar is updated correctly.

BUG:187902

svn path=/trunk/extragear/graphics/digikam/; revision=972993